@@ -176,7 +176,6 @@ main(argc, argv)
     int fd;
     int cmnd_status;
     int sudo_mode;
-    int sudoers_flags;
 #ifdef POSIX_SIGNALS
     sigset_t set, oset;
 #else
@@ -231,7 +230,6 @@ main(argc, argv)
     /* Setup defaults data structures. */
     init_defaults();
 
-    sudoers_flags = 0;
     if (sudo_mode & MODE_SHELL)
 	user_cmnd = "shell";
     else
@@ -250,12 +248,10 @@ main(argc, argv)
 		break;
 	    case MODE_VALIDATE:
 		user_cmnd = "validate";
-		sudoers_flags = def_ival(I_VERIFYPW);
 		break;
 	    case MODE_KILL:
 	    case MODE_INVALIDATE:
 		user_cmnd = "kill";
-		sudoers_flags = PWCHECK_NEVER;
 		break;
 	    case MODE_LISTDEFS:
 		list_options();
@@ -264,7 +260,6 @@ main(argc, argv)
 	    case MODE_LIST:
 		user_cmnd = "list";
 		printmatches = 1;
-		sudoers_flags = def_ival(I_LISTPW);
 		break;
 	}
 
@@ -283,7 +278,7 @@ main(argc, argv)
     add_env(!(sudo_mode & MODE_SHELL));	/* add in SUDO_* envariables */
 
     /* Validate the user but don't search for pseudo-commands. */
-    validated = sudoers_lookup(sudoers_flags);
+    validated = sudoers_lookup(sudo_mode);
 
     /* This goes after the sudoers parse since we honor sudoers options. */
     if (sudo_mode == MODE_KILL || sudo_mode == MODE_INVALIDATE) {
